# Football-Analysis-using-YOLO

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
assign_team/: __init__.py
stubs/: track_stubs.pkl
trackers/: tracker.py
