[project]
name = "football-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "supervision>=0.26.1",
    "ultralytics>=8.3.170",
]
